# HokieHelpFinal

./: .gitignore  README.md  docker-compose.dev.yml  package-lock.json  package.json
services/admin/: Dockerfile  pyproject.toml
services/admin/src/admin/: config.py  health.py  http_logs.py  logbuffer.py  main.py  runner.py  scheduler.py  storage_browser.py  store.py
services/admin/src/admin/static/: index.html
services/admin/tests/: test_config.py  test_health.py  test_main.py  test_runner.py  test_scheduler.py  test_store.py
services/chatbot/: Dockerfile  pyproject.toml
services/chatbot/src/chatbot/: app.py  config.py  guard.py  llm.py  logbuffer.py  main.py  retriever.py  session_store.py
services/chatbot/tests/: test_app.py  test_config.py  test_guard.py  test_llm.py  test_retriever.py  test_session_store.py
services/crawler/: .env.example  Dockerfile  pyproject.toml
services/crawler/minio_data/cleaned/: About.html.md  About.html.meta.json  academic.html.meta.json  engage.html.md  index.html.md  index.meta.json  people.html.md  research.html.md
services/crawler/minio_data/cleaned/About/: Contact.html.md  accreditation.html.meta.json  principles-of-community.html.meta.json  strategicplan.html.md  strategicplan.html.meta.json
services/crawler/minio_data/cleaned/academic/: graduate.html.md  graduate.html.meta.json  undergraduate.html.meta.json
services/crawler/minio_data/cleaned/engage/: Giving.html.md  entrepreneurship.html.md  entrepreneurship.html.meta.json  industry.html.md
services/crawler/minio_data/cleaned/people/: administration.html.md  administration.html.meta.json
services/crawler/minio_data/cleaned/research/: Seminars.html.md  Seminars.html.meta.json  centers-and-institutes.html.md  centers-and-institutes.html.meta.json  research-areas.html.md
services/crawler/minio_data/raw/: academic.html.md  engage.html.meta.json  index.md  people.html.meta.json  research.html.meta.json
services/crawler/scripts/: discover_urls.py  filter_comparison.py
services/crawler/src/crawler/: __init__.py  cleaner.py  config.py  crawl.py  documents.py  main.py  markdown_doc.py  metadata.py  storage.py
services/crawler/src/hokiehelp_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/crawler/tests/: conftest.py  test_cleaner.py  test_config.py  test_crawl.py  test_documents.py  test_main.py  test_markdown_doc.py  test_metadata.py  test_storage.py
services/embedder/: Dockerfile  pyproject.toml
services/embedder/src/embedder/: config.py  embedder.py  indexer.py  main.py  server.py  storage.py  validator.py
services/embedder/tests/: conftest.py  test_config.py  test_embedder.py  test_indexer.py  test_main.py  test_server.py  test_storage.py  test_validator.py
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/src/pipeline/: config.py  jobs.py  main.py
services/pipeline/tests/: test_config.py  test_jobs.py
(+138 files in other folders)
