[project]
name = "hokiehelp-embedder"
version = "0.1.0"
description = "Embedding and Qdrant indexing service for HokieHelp RAG pipeline"
requires-python = ">=3.11"
dependencies = [
    "minio>=7.2.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
hokiehelp-embed = "embedder.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
